--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,15 +61,15 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	</welcome-file-list>
 
 	<error-page>
-		<error-code>401</error-code>
-		<location>/WEB-INF/jsp/401.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>403</error-code>
-		<location>/WEB-INF/jsp/403.jsp</location>
+		<error-code>500</error-code>
+		<location>/WEB-INF/jsp/error500.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/WEB-INF/jsp/404.jsp</location>
+		<location>/WEB-INF/jsp/error404.jsp</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.NullPointException</exception-type>
+		<location>/error500.jsp</location>
 	</error-page>
 </web-app>
