--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,10 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 		<location>/WEB-INF/jsp/error404.jsp</location>
 	</error-page>
 	<error-page>
+		<error-code>400</error-code>
+		<location>/WEB-INF/jsp/error400.jsp</location>
+	</error-page>
+	<error-page>
 		<exception-type>java.lang.NullPointException</exception-type>
 		<location>/error500.jsp</location>
 	</error-page>
