管理员功能的实现

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,7 +40,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	</filter>
 	<filter-mapping>
 		<filter-name>UserFilter</filter-name>
-		<url-pattern>/page/*</url-pattern>
+		<url-pattern>/WEB-INF/page/*</url-pattern>
 	</filter-mapping>
 	<filter>
 		<filter-name>HiddenHttpMethodFilter</filter-name>
